--- a/scai/common/doc/conf.py.in
+++ b/scai/common/doc/conf.py.in
@@ -2,6 +2,10 @@ import sys, os
 
 # -- General configuration -----------------------------------------------------
 
+# Add any Sphinx extension module names here, as strings. They can be extensions
+# coming with Sphinx (named 'sphinx.ext.*') or your custom ones.
+extensions = ['sphinx.ext.mathjax']
+
 # The suffix of source filenames.
 source_suffix = '.rst'
 
