--- a/scai/tasking/CMakeLists.txt
+++ b/scai/tasking/CMakeLists.txt
@@ -65,11 +65,10 @@ else  ( NOT SCAI_COMPLETE_BUILD )
     CheckValueAtCompleteBuild ( ${PROJECT_SURNAME} )
 endif ( NOT SCAI_COMPLETE_BUILD )
 
-## C++11 or Boost
-include ( CheckC++11 )
-if    ( NOT CXX_SUPPORTS_C11 OR BUILD_TEST )
+## Use Boost if BUILD_TEST is enabled
+if ( BUILD_TEST )
     include( Package/Boost )
-endif ( NOT CXX_SUPPORTS_C11 OR BUILD_TEST )
+endif ( BUILD_TEST )
 
 ### include all search packages
 addInternalAndExternalPackages()
