--- a/scai/blaskernel/examples/CMakeLists.txt
+++ b/scai/blaskernel/examples/CMakeLists.txt
@@ -41,13 +41,14 @@ endif ( OPENMP_FOUND AND USE_OPENMP )
 # example of a library module ( will be used by executable UseModule )
 
 foreach ( executable CG_BLAS )
-    add_executable ( ${executable} ${executable}.cpp )
-    target_link_libraries ( ${executable} scai_blaskernel )
+    add_executable ( ${executable}.exe ${executable}.cpp )
+    target_link_libraries ( ${executable}.exe scai_blaskernel )
     set ( EXAMPLE_EXECUTABLES "${EXAMPLE_EXECUTABLES} ${executable}.exe" )
 endforeach ( executable )
 
 ## install examples
 configure_file ( "${CMAKE_CURRENT_SOURCE_DIR}/make.inc.in" "${CMAKE_CURRENT_BINARY_DIR}/make.inc" )
+file( COPY run_all.sh DESTINATION ${CMAKE_CURRENT_BINARY_DIR} )
 install ( DIRECTORY ./ DESTINATION ${PROJECT_EXAMPLE_DIR} FILES_MATCHING REGEX "^.*.(c|h)pp$" )
 install ( FILES Makefile ${CMAKE_CURRENT_BINARY_DIR}/make.inc DESTINATION ${PROJECT_EXAMPLE_DIR} )
 install ( PROGRAMS run_all.sh DESTINATION ${PROJECT_EXAMPLE_DIR} )
