--- a/scai/lama/examples/bench/CMakeLists.txt
+++ b/scai/lama/examples/bench/CMakeLists.txt
@@ -31,8 +31,8 @@
 ###
 
 foreach ( executable conversion matadd matmul )
-    add_executable( ${executable} ${executable}.cpp )
-    target_link_libraries( ${executable} ${PROJECT_NAME} )
+    add_executable( ${executable}.exe ${executable}.cpp )
+    target_link_libraries( ${executable}.exe ${PROJECT_NAME} )
     set ( EXAMPLE_EXECUTABLES_BENCH "${EXAMPLE_EXECUTABLES_BENCH} ${executable}.exe" )
 endforeach ( executable )
 
