--- a/scai/logging/examples/CMakeLists.txt
+++ b/scai/logging/examples/CMakeLists.txt
@@ -34,9 +34,9 @@
 
 # LogLevels example, here we compile also LOG_TRACE macros
 
-add_executable( LogLevels LogLevels.cpp )
-target_link_libraries( LogLevels ${PROJECT_NAME} )
-set_target_properties( LogLevels PROPERTIES COMPILE_FLAGS -DSCAI_LOG_LEVEL_TRACE )
+add_executable( LogLevels.exe LogLevels.cpp )
+target_link_libraries( LogLevels.exe ${PROJECT_NAME} )
+set_target_properties( LogLevels.exe PROPERTIES COMPILE_FLAGS -DSCAI_LOG_LEVEL_TRACE )
 
 # ThreadTest example, here we need the Boost Thread library
 
@@ -54,8 +54,8 @@ include ( Package/OpenMP )
 if    ( OPENMP_FOUND )
 	set (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${OpenMP_CXX_FLAGS}")
     # Adding this example only possible if OpenMP is available
-    add_executable( LogOpenMP LogOpenMP.cpp )
-    target_link_libraries( LogOpenMP ${PROJECT_NAME} )
+    add_executable( LogOpenMP.exe LogOpenMP.cpp )
+    target_link_libraries( LogOpenMP.exe ${PROJECT_NAME} )
 else  ( OPENMP_FOUND )
     message ( STATUS "LogOpenMP example not built, no compiler option found" )
 endif ( OPENMP_FOUND )
@@ -64,6 +64,7 @@ set ( EXAMPLE_EXECUTABLES "LogLevels.exe LogOpenMP.exe" )
 
 ## install examples
 configure_file ( "${CMAKE_CURRENT_SOURCE_DIR}/make.inc.in" "${CMAKE_CURRENT_BINARY_DIR}/make.inc" )
+file( COPY run_all.sh DESTINATION ${CMAKE_CURRENT_BINARY_DIR} )
 install ( DIRECTORY ./ DESTINATION ${PROJECT_EXAMPLE_DIR} FILES_MATCHING PATTERN "*.cpp" )
 install ( FILES config Makefile ${CMAKE_CURRENT_BINARY_DIR}/make.inc DESTINATION ${PROJECT_EXAMPLE_DIR} )
 install ( PROGRAMS run_all.sh DESTINATION ${PROJECT_EXAMPLE_DIR} )
