--- a/scai/solver/examples/spy/CMakeLists.txt
+++ b/scai/solver/examples/spy/CMakeLists.txt
@@ -44,8 +44,8 @@ find_library( PNG_LIBRARY
 if ( PNG_LIBRARY AND PNG_INCLUDE_DIR )
     include_directories( ${PNG_INCLUDE_DIR} )
     foreach ( executable amg_spy spy )
-        add_executable( ${executable} ${executable}.cpp )
-        target_link_libraries( ${executable} ${PROJECT_NAME} ${PNG_LIBRARY} )
+        add_executable( ${executable}.exe ${executable}.cpp )
+        target_link_libraries( ${executable}.exe ${PROJECT_NAME} ${PNG_LIBRARY} )
         set ( EXAMPLE_EXECUTABLES_SPY "${EXAMPLE_EXECUTABLES_SPY} ${executable}.exe" )
     endforeach ( executable )
 endif ()
