Update Cmake configuration for dmemo

--- a/scai/dmemo/CMakeLists.txt
+++ b/scai/dmemo/CMakeLists.txt
@@ -25,10 +25,9 @@
  # SOFTWARE.
  # @endlicense
  #
- # @brief Main specification file for CMake
- # @author Thomas Brandes, Jiri Kraus
- # @date 29.03.2012
- # @since 1.0.0
+ # @brief CMake specification file for project dmemo (distributed memory)
+ # @author Thomas Brandes
+ # @date 16.02.2016
 ###
 
 ### Set required CMake version
@@ -133,13 +132,9 @@ scai_project (
 add_subdirectory ( doc )
 add_subdirectory( examples )
 
-# message ( STATUS "GPI2_FOUND=${GPI2_FOUND} IBVERBS_FOUND=${IBVERBS_FOUND} USE_GPI2=${USE_GPI2}" )
-
-# if ( GPI2_FOUND AND IBVERBS_FOUND AND USE_GPI2 )
-#     add_subdirectory( gpi )
-# endif ( GPI2_FOUND AND IBVERBS_FOUND AND USE_GPI2 )
-
-message ( STATUS "MPI_FOUND=${MPI_FOUND} USE_MPI=${USE_MPI}" )
+if ( GPI_FOUND AND USE_GPI )
+    add_subdirectory( gpi )
+endif ( GPI_FOUND AND USE_GPI )
 
 if ( MPI_FOUND AND USE_MPI )
     add_subdirectory ( mpi )
@@ -162,12 +157,6 @@ set_target_properties ( ${PROJECT_NAME} PROPERTIES VERSION ${${UPPER_PROJECT_NAM
 ## add link libraries
 
 addInternalAndExternalLinkLibraries()
-
-# external libraries
-
-# if ( GPI2_FOUND AND IBVERBS_FOUND AND USE_GPI2 )
-#     target_link_libraries ( ${PROJECT_NAME} ${GPI2_LIBRARIES} ${IBVERBS_LIBRARIES} )
-# endif ( GPI2_FOUND AND IBVERBS_FOUND AND USE_GPI2 )
 
 ### install ###
 
