use USE_GRAPHPARTITIONING in dmemo

--- a/scai/dmemo/CMakeLists.txt
+++ b/scai/dmemo/CMakeLists.txt
@@ -94,11 +94,9 @@ endif ( WIN32 )
 include_directories ( ../.. )
 addInternalAndExternalIncludes()
 
-if ( METIS_FOUND OR PARMETIS_FOUND )
-    set ( MetisDistribution MetisDistribution )
-else ( METIS_FOUND OR PARMETIS_FOUND )
-    set ( MetisDistribution  )
-endif ( METIS_FOUND OR PARMETIS_FOUND )
+if    ( ( METIS_FOUND OR PARMETIS_FOUND ) AND USE_GRAPHPARTITIONING )
+    set ( METISDISTRIBUTION MetisDistribution )
+endif ( ( METIS_FOUND OR PARMETIS_FOUND ) AND USE_GRAPHPARTITIONING )
 
 ### Add classes/headers to source files CXX_SOURCES, CXX_HEADERS, ...
 
@@ -121,7 +119,7 @@ scai_project (
         NoDistribution
         Redistributor
 
-        ${MetisDistribution}
+        ${METISDISTRIBUTION}
 
     HEADERS                  # .hpp only
 
@@ -131,7 +129,7 @@ scai_project (
 ### add subdirectories
 
 add_subdirectory ( doc )
-add_subdirectory( examples )
+add_subdirectory ( examples )
 
 # message ( STATUS "GPI2_FOUND=${GPI2_FOUND} IBVERBS_FOUND=${IBVERBS_FOUND} USE_GPI2=${USE_GPI2}" )
 
