cleanup cmake variables and add usage of USE_XXX in summaries

--- a/scai/logging/test/make.inc.in
+++ b/scai/logging/test/make.inc.in
@@ -25,7 +25,7 @@
  # SOFTWARE.
  # @endlicense
  #
- # @brief Definition of variables that will be included in the test Makfile
+ # @brief Definition of variables that will be included in the test Makefile
  # @author Jan Ecker
  # @date 03.09.2015
  # @since 2.0.0
