Futher cmake bug test

--- a/scai/logging/test/make.inc.in
+++ b/scai/logging/test/make.inc.in
@@ -30,7 +30,8 @@
  # @date 03.09.2015
  # @since 2.0.0
 ###
+${CMAKE_CURRENT_SOURCE_DIR}
 
-INCLUDE_DIR=@CMAKE_CURRENT_SOURCE_DIR@/../..
+INCLUDE_DIR=${CMAKE_CURRENT_SOURCE_DIR}/../..
 CXX=${CMAKE_CXX_COMPILER}
 CXX_FLAGS=${SCAI_LANG_FLAGS}
