--- a/scai/hmemo/test/CMakeLists.txt
+++ b/scai/hmemo/test/CMakeLists.txt
@@ -39,7 +39,7 @@ set ( CXX_SOURCES
       DelayedReleaseTest.cpp
 ) 
 
-include_directories ( ${Boost_INCLUDE_DIR} )
+include_directories ( ${SCAI_BOOST_INCLUDE_DIR} )
 
 add_executable ( MemoryTest ${CXX_SOURCES} )
 
