--- a/scai/solver/examples/spy/Makefile
+++ b/scai/solver/examples/spy/Makefile
@@ -1,6 +1,6 @@
 include ../make.inc
 
-INCLUDE_FLAGS = -I${BOOST_INCLUDE_DIR} -I${SCAI_ROOT}/include
+INCLUDE_FLAGS = -I${SCAI_BOOST_INCLUDE_DIR} -I${SCAI_ROOT}/include
 
 LD_FLAGS = ${SCAI_LD_FLAGS} -Wl,-rpath=${SCAI_ROOT}/lib -lpng
 
