--- a/scai/hmemo/examples/make.inc.in
+++ b/scai/hmemo/examples/make.inc.in
@@ -31,7 +31,7 @@
 ##
 
 SCAI_ROOT=${CMAKE_INSTALL_PREFIX}
-BOOST_INCLUDE_DIR=${BOOST_INCLUDE_DIR}
+SCAI_BOOST_INCLUDE_DIR=${SCAI_BOOST_INCLUDE_DIR}
 CXX=${CMAKE_CXX_COMPILER}
 CXX_FLAGS=${CMAKE_CXX_FLAGS} ${CMAKE_CXX_FLAGS_RELEASE} -DSCAI_TRACE_OFF -DSCAI_LOG_LEVEL_DEBUG -DSCAI_ASSERT_LEVEL_${SCAI_ASSERT_LEVEL}
 CXX_CUDA=${CUDA_NVCC_EXECUTABLE}
