--- a/scai/logging/examples/make.inc.in
+++ b/scai/logging/examples/make.inc.in
@@ -31,7 +31,7 @@
 ##
 
 SCAI_ROOT=${CMAKE_INSTALL_PREFIX}
-BOOST_INCLUDE_DIR=${BOOST_INCLUDE_DIR}
+SCAI_BOOST_INCLUDE_DIR=${SCAI_BOOST_INCLUDE_DIR}
 CXX=${CMAKE_CXX_COMPILER}
 CXX_FLAGS=${CMAKE_CXX_FLAGS} ${CMAKE_CXX_FLAGS_RELEASE} -DSCAI_LOG_LEVEL_TRACE -DSCAI_ASSERT_LEVEL_${SCAI_ASSERT_LEVEL}
 SCAI_LD_FLAGS=${CMAKE_CXX_FLAGS} ${LAMA_USER_LINK_FLAGS} -L${CMAKE_INSTALL_PREFIX}/lib -lscai_logging -lscai_common
