--- a/scai/logging/CMakeLists.txt
+++ b/scai/logging/CMakeLists.txt
@@ -87,7 +87,8 @@ if    ( WIN32 )
 endif ( WIN32 )
 
 ### Project System-Include ( also configured files )
-include_directories ( ../.. ${CMAKE_BINARY_DIR}/include )
+set( CONFIGURE_INCLUDE_DIR ${CMAKE_BINARY_DIR}/include )
+include_directories ( ../.. ${CONFIGURE_INCLUDE_DIR} )
 addInternalAndExternalIncludes()
 
 ### Add classes/headers to source files CXX_SOURCES, CXX_HEADERS, ...
