--- a/scai/tasking/CMakeLists.txt
+++ b/scai/tasking/CMakeLists.txt
@@ -86,8 +86,9 @@ if    ( WIN32 )
 	add_definitions ( -DCOMMON_COMPILING_DLL )
 endif ( WIN32 )
 
-### Project System-Include
-include_directories ( ../.. ${CMAKE_BINARY_DIR}/include )
+### Project System-Include ( also configured files )
+set( CONFIGURE_INCLUDE_DIR ${CMAKE_BINARY_DIR}/include )
+include_directories ( ../.. ${CONFIGURE_INCLUDE_DIR} )
 addInternalAndExternalIncludes()
 
 ### Add classes/headers to source files CXX_SOURCES, CXX_HEADERS, ...
