--- a/scai/dmemo/CMakeLists.txt
+++ b/scai/dmemo/CMakeLists.txt
@@ -88,8 +88,9 @@ if ( WIN32 )
 	add_definitions ( -DCOMMON_COMPILING_DLL )
 endif ( WIN32 )
 
-### Project System-Include
-include_directories ( ../.. ${CMAKE_BINARY_DIR}/include )
+### Project System-Include ( also configured files )
+set( CONFIGURE_INCLUDE_DIR ${CMAKE_BINARY_DIR}/include )
+include_directories ( ../.. ${CONFIGURE_INCLUDE_DIR} )
 addInternalAndExternalIncludes()
 
 if    ( ( METIS_FOUND OR PARMETIS_FOUND ) AND USE_GRAPHPARTITIONING )
