--- a/scai/tracing/CMakeLists.txt
+++ b/scai/tracing/CMakeLists.txt
@@ -85,7 +85,9 @@ if    ( WIN32 )
 endif ( WIN32 )
 
 ### Project System-Include
-include_directories ( ../.. ${CMAKE_BINARY_DIR}/include )
+### Project System-Include ( also configured files )
+set( CONFIGURE_INCLUDE_DIR ${CMAKE_BINARY_DIR}/include )
+include_directories ( ../.. ${CONFIGURE_INCLUDE_DIR} )
 addInternalAndExternalIncludes()
 
 ### Add classes/headers to source files CXX_SOURCES, CXX_HEADERS, ...
