--- a/scai/utilskernel/test/CMakeLists.txt
+++ b/scai/utilskernel/test/CMakeLists.txt
@@ -34,6 +34,7 @@ set ( CXX_SOURCES
       UtilsKernelTest
       HArrayUtilsTest
       UtilsTest
+      LArrayTest
 ) 
 
 include_directories ( ${Boost_INCLUDE_DIR} )
