--- a/scai/tracing/test/make.inc.in
+++ b/scai/tracing/test/make.inc.in
@@ -31,7 +31,7 @@
  # @since 2.0.0
 ###
 
-INCLUDES=-I"${CMAKE_CURRENT_SOURCE_DIR}/../.." -I"${CMAKE_BINARY_DIR}/include" -I"${CMAKE_INSTALL_PREFIX}/include"
-INSTALL_PREFIX=${CMAKE_INSTALL_PREFIX}
+SCAI_INCLUDES= -I"${CMAKE_CURRENT_SOURCE_DIR}/../.." -I"${CMAKE_BINARY_DIR}/include" -I"${CMAKE_INSTALL_PREFIX}/include"
+SCAI_CXX_FLAGS=${CMAKE_CXX_FLAGS}
+SCAI_LD_FLAGS=${CMAKE_CXX_FLAGS} -L.. -L${CMAKE_INSTALL_PREFIX}/lib -Wl,-rpath=${CMAKE_INSTALL_PREFIX}/lib -lscai_tracing -lscai_logging -lscai_common
 CXX=${CMAKE_CXX_COMPILER}
-CXX_FLAGS=${SCAI_LANG_FLAGS}
